# Rick-Morty-API

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/rmtrend/: __init__.py  rmtrend.py
tests/: test_rmtrend.py
